@@ -1,3 +1,12 @@
+2004-01-10  Marcus Bjurman  <marbj499@student.liu.se>
+
+	* src/gnome-cmd-file-collection.c: 
+	* src/gnome-cmd-file-collection.h: 
+	* src/gnome-cmd-dir.c: 
+	* src/gnome-cmd-file.c:
+	Fixed crash when renaming a directory. This should once again fix
+	bug #129179.
+
 2004-01-06  Jordi Mallach  <jordi@sindominio.net>
 
 	* configure.in (ALL_LINGUAS): Added "ca" (Catalan).
